<resources>

    !-- Inicio-->
    <string name="app_name">ElMochicaApp</string>
    <string name="bienvenida">¡BIENVENIDOS!</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="pregunta">¿No tienes una cuenta?</string>
    <string name="registrate">Regístrate</string>

    !-- Registro-->
    <string name="registrate_form">¡Regístrate!</string>
    <string name="nombre_form">Nombre</string>
    <string name="numero_form">Número teléfonico</string>
    <string name="dni_form">DNI</string>
    <string name="correo_form">Correo electrónico</string>
    //usado en activity_login.xml y registro.xml
    <string name="contrasena_form">Contraseña</string>
    //usado en activity_login.xml y registro.xml
    <string name="registrar_boton">Registrar Datos</string>
    <string name="pregunta_form">¿Ya tienes una cuenta?</string>
    <string name="iniciar_form">Iniciar Sesión</string>

    !-- Login-->
    <string name="iniciar_sesion_form">¡Ingresa tus datos!</string>
    <string name="iniciar_sesion_boton">Iniciar Sesión</string>
    <string name="iniciar_pregunta_form">¿No tienes una cuenta?</string>
    <string name="iniciar_registrate_form">Regístrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    !-- Menu-->
    <string name="entradas_cat">Entradas</string>
    <string name="mariscos_cat">Mariscos</string>
    <string name="criollos_cat">Criollos</string>
    <string name="btn_pagar">Ir a Pagar</string>

    !-- Cart-->
    <string name="carrito">Carrito</string>
    <string name="productos">Productos</string>
    <string name="subtotal">Subtotal</string>
    <string name="btn_cart">Ir a pagar</string>

    !-- Siderbar-->
    <string name="opc1">Mi pedido</string>
    <string name="opc2">Contáctanos</string>
    <string name="opc3">Cerrar Sesión</string>

    !-- Mi Pedido-->
    <string name="ver_mi_pedido">Mi pedido</string>
    <string name="estado_de_mi_pedido">Estado de mi pedido</string>
    <string name="tiempo_de_entrega">Tiempo estimado de entrega</string>
    <string name="resumen_de_pedido">Resumen de pedido</string>
    <string name="cancelar_mi_pedido">Cancelar Pedido</string>




</resources>