<?xml version="1.0" encoding="utf-8"?>
    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.MyOrderActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/brown"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back"
            app:title="Mi Pedido"
            app:titleMarginStart="90dp"
            app:titleTextColor="@color/white" />

        <!-- Título de la pantalla -->
        <TextView
            android:id="@+id/order_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/ver_mi_pedido"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Hora -->

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="5:00"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <!-- Estado del pedido -->

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_de_mi_pedido"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/order_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Tiempo estimado de entrega -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/delivery_time_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_status"
        tools:ignore="MissingConstraints">

        <!-- Estado 1: Evaluación -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/evaluation_frame"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:id="@+id/evaluation_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/evaluacion" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="Evaluación"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Línea de conexión -->
        <View
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="35dp"
            android:background="@android:color/black" />

        <!-- Estado 2: En Preparación -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/preparacion" />
            </FrameLayout>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:text="En preparación"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <!-- Línea de conexión -->
        <View
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="35dp"
            android:background="@android:color/black" />

        <!-- Estado 3: En Camino -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/camino" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="En camino"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Línea de conexión -->
        <View
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="35dp"
            android:background="@android:color/black" />

        <!-- Estado 4: Entregado -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circle_background"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/preparacion" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="Entregado"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/delivery_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/tiempo_de_entrega"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_status" />

    <!-- Divider -->
    <TextView
        android:id="@+id/delivery_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="9:35 - 9:45 pm"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_time_title" />

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/delivery_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Resumen de Pedido -->
        <TextView
            android:id="@+id/resumen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resumen_de_pedido"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- RecyclerView para mostrar los pedidos -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_items_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/resumen_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancel_button" />

        <!-- Botón Cancelar Pedido -->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:backgroundTint="@color/brown"
            android:text="@string/cancelar_mi_pedido"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
